--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_countdown_timer: ^4.1.0
   dropdown_button2: ^2.1.0
   dotted_border: ^2.0.0+3
+  rive: ^0.11.13
 
 dev_dependencies:
   flutter_test:
