--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.0 <3.0.0'
+  sdk: '>=3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -45,6 +45,20 @@ dependencies:
   dropdown_button2: ^2.1.0
   dotted_border: ^2.0.0+3
   rive: ^0.11.13
+  flutter_secure_storage: ^9.0.0
+  equatable: ^2.0.5
+  bloc: ^8.1.2
+  flutter_bloc: ^8.1.3
+  hydrated_bloc: ^9.1.2
+  formz: ^0.4.1
+  chopper: ^7.0.6
+  get_it: ^7.6.4
+  hive: ^2.2.3
+  freezed_annotation: ^2.4.1
+  hive_flutter: ^1.1.0
+  path_provider: ^2.1.1
+  shared_preferences: ^2.2.1
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -56,6 +70,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  freezed: ^2.4.3
+  build_runner: ^2.1.7
+  chopper_generator: ^7.0.4
+  json_serializable: ^6.1.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
