--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   shared_preferences: ^2.2.1
   http: ^1.1.0
   shimmer_animation: ^2.1.0+1
+  flutter_rating_bar: ^4.0.1
+  syncfusion_flutter_datepicker: ^23.1.38
 
 dev_dependencies:
   flutter_test:
