--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ dependencies:
   shimmer_animation: ^2.1.0+1
   flutter_rating_bar: ^4.0.1
   syncfusion_flutter_datepicker: ^23.1.38
+  sticky_headers: ^0.3.0+2
+  flutter_sticky_header: ^0.6.5
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
