--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   flutter_sticky_header: ^0.6.5
   intl: ^0.18.1
   flutter_speed_dial: ^7.0.0
+  flutter_onboarding_slider: ^1.0.10
 
 dev_dependencies:
   flutter_test:
