--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,11 @@ dependencies:
   intl: ^0.18.1
   flutter_speed_dial: ^7.0.0
   flutter_onboarding_slider: ^1.0.10
+  collection: ^1.17.2
+  flutter_animation_progress_bar: ^2.3.1
+  simple_circular_progress_bar: ^1.0.2
+  dashed_circular_progress_bar: ^0.0.4
+  countup: ^0.1.4
 
 dev_dependencies:
   flutter_test:
