--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
   sdk: '>=3.0.0'
@@ -72,6 +72,7 @@ dependencies:
   simple_circular_progress_bar: ^1.0.2
   dashed_circular_progress_bar: ^0.0.4
   countup: ^0.1.4
+  url_launcher: ^6.2.1
 
 dev_dependencies:
   flutter_test:
