feat: survey list redesign

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   dashed_circular_progress_bar: ^0.0.4
   countup: ^0.1.4
   url_launcher: ^6.2.1
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
