--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,10 @@ dependencies:
   countup: ^0.1.4
   url_launcher: ^6.2.1
   auto_size_text: ^3.0.0
+  simple_gradient_text: ^1.3.0
+  syncfusion_flutter_sliders: ^23.1.44
+  syncfusion_flutter_core: ^23.1.44
+  floating_bubbles: ^2.5.1
 
 dev_dependencies:
   flutter_test:
